2006-01-06  Philip Langdale  <plangdale@vmware.com>

	* Initial release.